plugins/kotlin/idea/tests/testData/gradle/multiplatform/experimentalTier/jvmAndAndroidSource/consumer/src/commonTest/kotlin/test/consumer_commonTest_usages.kt
package test

fun useCommonTest() {
    // Known issue
    useJvmAndAndroidMain()
    <!HIGHLIGHTING("severity='ERROR'; descr='[UNRESOLVED_REFERENCE] Unresolved reference: useJvmMain'")!>useJvmMain<!>()
}
